--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: online_shop.wsgi:application
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
+    /files: uploads
